# ChangeLog for www-apps/metadot
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/metadot/ChangeLog,v 1.29 2007/07/29 17:30:49 phreak Exp $

  29 Jul 2007; Christian Heim <phreak@gentoo.org> metadot-6.1.6.ebuild,
  metadot-6.4.5.4.ebuild:
  Fixing the DEPEND/RDEPEND for the move of net-www/apache to
  www-servers/apache (#78622).

  12 May 2007; Luca Longinotti <chtekk@gentoo.org> metadot-6.1.6.ebuild,
  metadot-6.4.5.4.ebuild:
  Apache 1.X masking (fix ebuilds to not require apache-1*).

  02 Jan 2007; Renat Lumpau <rl03@gentoo.org> metadot-6.1.6.ebuild,
  metadot-6.4.5.4.ebuild:
  Drop mysql dep wrt bug 159781

  11 Dec 2006; Renat Lumpau <rl03@gentoo.org> metadot-6.4.5.4.ebuild:
  Bug #156444.

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> metadot-6.1.6.ebuild,
  metadot-6.4.5.4.ebuild:
  dev-db/mysql => virtual/mysql

  10 Nov 2006; Renat Lumpau <rl03@gentoo.org> metadot-6.4.5.4.ebuild:
  Drop Msql-Mysql-modules per bug #153336.

  05 Oct 2006; Renat Lumpau <rl03@gentoo.org> files/digest-metadot-6.4.5.4,
  Manifest:
  Regenerated digest

*metadot-6.4.5.4 (04 Oct 2006)

  04 Oct 2006; Renat Lumpau <rl03@gentoo.org> -metadot-6.4.5.3.ebuild,
  +metadot-6.4.5.4.ebuild:
  Version bump

  21 May 2006; Renat Lumpau <rl03@gentoo.org> metadot-6.4.5.3.ebuild:
  Add HTML-Format (#133780).

  19 May 2006; Renat Lumpau <rl03@gentoo.org> metadot-6.4.5.3.ebuild:
  Properly handle Apache2 config file wrt bug #133611.

*metadot-6.4.5.3 (16 May 2006)

  16 May 2006; Renat Lumpau <rl03@gentoo.org> -metadot-6.4.5.1.ebuild,
  +metadot-6.4.5.3.ebuild:
  Version bump

  27 Apr 2006; Alec Warner <antarus@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

*metadot-6.4.5.1 (20 Apr 2006)

  20 Apr 2006; Renat Lumpau <rl03@gentoo.org> -metadot-6.4_p3.ebuild,
  +metadot-6.4.5.1.ebuild:
  Version bump, removed old version
