@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX metadot.conf 445 RMD160 b325d40954c82d5f603783d954394c93769cbe56 SHA1 69cac1673303eaf9d0002f99594487846daeea6f SHA256 e992b4f22f84b449da1be0a93c790a43a0a106b575c62e2727c1e069b4d73ae0
 AUX postinstall-en-6.1.6.txt 1567 RMD160 6b02507bfdce34372d658861dd7178290b73187b SHA1 afec376502c95cf1bc483725866808f433b46574 SHA256 0120a85fcc503e8a7063cf27cc89876b6b190adef1d4859b0a6710059f5eecb5
 AUX postinstall-en-6.4_p3.txt 1174 RMD160 90eff203fbcc2918049313bb594befa3bca914b9 SHA1 baf27e233cf3534830fd17a3f9cf58dddb9ec0a2 SHA256 2e034e959190db851c8865b0dd7ecb2a9c64b24b3ab2b2e30f6d8f75d046affc
@@ -5,7 +8,14 @@ AUX reconfig-6.1.6 337 RMD160 99bf2e565bf14395f54b0b536f651e635b80b988 SHA1 ff71
 AUX reconfig-6.4_p3 361 RMD160 035c45b13bf3cd4a06ecaa7abf8a674278056ed0 SHA1 1d4987e2140a7db5ce7d8d3aca7c6a0686854ec0 SHA256 76291fa277b4b32486bb550b533851b2da10afca0eb79203305742b8acc78f28
 DIST Metadot6.4.5.4.tar.gz 4055040 RMD160 596e6a813b449ed4de89af8fbcf16df22c744d55 SHA1 beb11a70024ce883d04cc279606193277d7befab SHA256 d125b61d59563d25b2feac8ae692225478130e88f5f9165cf1de34c7985cc785
 DIST metadot6.1.6.tar.gz 3754969 RMD160 a0b28fd318ac7518caa6b812f9ee4a114795fede SHA1 d791c235d6cf7869c39b38bb60a644607d6dbcba SHA256 d7033b8ad561914714ea3d4d32d745566b291494fd3cfc46f66c496e37c48339
-EBUILD metadot-6.1.6.ebuild 1398 RMD160 cca3a6d764c7abccab1ce88e2035d57334fa916e SHA1 889f978b0c162beb14209310baf47430691d7b94 SHA256 1aebce3b021c02fbd26fc45cd62011a212f0acec2d05778ce8cfdfe2797c117b
-EBUILD metadot-6.4.5.4.ebuild 1872 RMD160 bcfcaefd226c9cfe84b3a1128aa4605dbf19f166 SHA1 1a1768757a8080be2a70a818025df54c75a7302e SHA256 ea9eaca9d52ec069b37c2297ec2645bd5a00e5d04d674410e1de81e45b30e605
-MISC ChangeLog 4166 RMD160 05780b367f413c92504a65b2a139ae8a64f55e7f SHA1 c4ba91945a854c964afaf72cfc2dec1632c10f97 SHA256 86a71efeb3bcc2ee65c1d18d9e575164a38522fb32835512bd336d223110b6da
+EBUILD metadot-6.1.6.ebuild 1378 RMD160 21aeafe785697653c3e8f5824603ca79804ef2de SHA1 0379a30b085d87bef96a3bdfef366ec134bbd5b1 SHA256 6f99bbadcfebd086e801b934155c9bc80e42cba6af99873ef656208cedb84d0b
+EBUILD metadot-6.4.5.4.ebuild 1860 RMD160 bbf817ad93e3b08710be8d2e420f01a30502a245 SHA1 0c0e0a2a4c6b6eb0679f05431c3f57ae9c80c29a SHA256 eb6d78a2b61a80ce473ce37e4b25c26a944dfd2766ac8aa2739b87148dd71179
+MISC ChangeLog 4488 RMD160 119e3f9c45e6b060656934f2b6afb93e3ded160e SHA1 bb945d3e7bc7773b3f091b5540e7839b849376fd SHA256 8386cd84d55d99faf32663c705ccf308ae74e09ebcf9cbb93ed1c8af5979aa65
 MISC metadata.xml 161 RMD160 d47e924599b33a35a50f4c9f5564d325c271f83b SHA1 5b91a6d8d06d3dca2d774425befba30caca51507 SHA256 9cd891fcf0af580e98b62d2f4ded9e53671599f5a7aafd5dce692b996d2a83f4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.8 (GNU/Linux)
+
+iEYEARECAAYFAkel/nAACgkQmPFBzbX68WHC5wCeJUJ6DlTkkn/El0wmB50pEJxk
+1PwAnikaVKKxHFe+DCLnq1yeAlWwOm/r
+=hDie
+-----END PGP SIGNATURE-----
